tests/lean/binop_at_pattern_issue.lean.expected.out
binop_at_pattern_issue.lean:4:4-4:17: error: Invalid pattern: Constructor or constant marked with `[match_pattern]` expected
